# agentic-neurodata-conversion

./: .bandit  .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  ADVANCED_INTELLIGENCE_ENHANCEMENTS.md  AGENT_SKILLS_STUDY_AND_APPLICATION.md  ANALYSIS_EXECUTIVE_SUMMARY.md  AUDIT_SUMMARY.md  BUG_FIXES_APPLIED.md  BUG_FIX_DUPLICATE_MESSAGES.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETE_IMPLEMENTATION_GUIDE.md  COMPLETE_INTELLIGENCE_ENHANCEMENTS_SUMMARY.md  COMPLETE_SESSION_SUMMARY.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  CONTRIBUTING.md  CONVERSATIONAL_AI_IMPLEMENTATION.md  CURRENT_STATUS.md  DIAGNOSTIC_METHODS.md  Dockerfile  FINAL_IMPLEMENTATION_STATUS.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_LLM_METRICS.md  FINAL_STATUS_REPORT.md  FRONTEND_ENUM_VERIFICATION.md  FRONTEND_FIXES_APPLIED.md  FRONTEND_FIX_INSTRUCTIONS.md  GOOGLE_AI_ANALYSIS_SESSION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_FIXES_SUMMARY.md  IMPORT_ISSUE_FINAL_STATUS.md  IMPROVEMENTS_MADE.md  IMPROVEMENT_SUGGESTIONS.md  INTELLIGENT_ENHANCEMENTS_SUMMARY.md  (+91 more)
.claude/: settings.local.json
.codex/: auth.json  config.toml  history.jsonl  version.json
.datalad/: config
.github/: README.md  pull_request_template.md
.local/: check_pyproject_deps.py
agentic_neurodata_conversion/: __init__.py  __init__.py.backup  cli.py  cli.py.backup  config.py
config/: default.json  docker.json  kubernetes.json  production.json  staging.json  testing.json
docs/: INDEX.md  INFORMATION_FLOW.md  README.md  TESTING-GUIDE.md  ci-cd-setup.md  datalad-setup.md  defensive_programming_review.md  deployment.md  overview-of-kg-work.md  pr_message.md  prompt-for-removal-of-phases.md  secrets-management.md  shared-technical-standards.md  system-analysis.md
documents/: Agentic_Design_Patterns_Complete.docx
etl/: .datalad_config  README.md  setup_datalad.py
evaluation-agent/: nwb_to_linkml.py
evaluation_agent copy/: nwbevalllll
evaluation_kg_system/: evaluation_kg_system.txt  requirements.md
examples/: README.md  config_usage_example.py  repository_structure_usage.py
final/: fs.py  sub-M541_ses-M54120240831_ecephys.jsonld  sub-M541_ses-M54120240831_ecephys.nt  sub-M541_ses-M54120240831_ecephys.owl.ttl  sub-M541_ses-M54120240831_ecephys.triples.txt
frontend/: README.md  app.js  index.html  styles.css  test-connection.html
heetpush/: conversation.py  conversionagent.py  mcp_server.py  scaffold template  test_pipeline.py  tool_config.yaml
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml
kg/: kg.py
kg_output/: sub-M541_ses-M54120240831_ecephys_evaluation_report.json  sub-M541_ses-M54120240831_ecephys_force_layout.json  sub-M541_ses-M54120240831_ecephys_knowledge_graph.jsonld  sub-M541_ses-M54120240831_ecephys_knowledge_graph.ttl  sub-M541_ses-M54120240831_ecephys_visualization.html
kg_output_final/: sub-M541_ses-M54120240831_ecephys_evaluation_report.html  sub-M541_ses-M54120240831_ecephys_evaluation_report.json  sub-M541_ses-M54120240831_ecephys_evaluation_report.txt  sub-M541_ses-M54120240831_ecephys_force_layout.json  sub-M541_ses-M54120240831_ecephys_graph_metadata.json  sub-M541_ses-M54120240831_ecephys_hierarchy.json  sub-M541_ses-M54120240831_ecephys_knowledge_graph.jsonld  sub-M541_ses-M54120240831_ecephys_knowledge_graph.ttl  sub-M541_ses-M54120240831_ecephys_linkml_data.jsonld  sub-M541_ses-M54120240831_ecephys_visualization.html
kg_output_v2/: sub-M541_ses-M54120240831_ecephys_evaluation_report.html  sub-M541_ses-M54120240831_ecephys_evaluation_report.txt  sub-M541_ses-M54120240831_ecephys_force_layout.json  sub-M541_ses-M54120240831_ecephys_graph_metadata.json  sub-M541_ses-M54120240831_ecephys_knowledge_graph.jsonld  sub-M541_ses-M54120240831_ecephys_linkml_data.jsonld  sub-M541_ses-M54120240831_ecephys_visualization.html
kg_service/: config.py
linkmlnwb_to_ttl/: lt.py
md docs/: AI_INFERRED_METADATA_ENHANCEMENT.md  ALL_USER_MESSAGE_FLOWS_COVERED.md  ALL_UX_FIXES_COMPLETE.md  ANTHROPIC_AGENT_SKILLS_STUDY.md  API_KEY_SETUP_COMPLETE.md  AUTO_FIX_WORKFLOW_BUG_FIXED.md  BACK_PROPAGATION_SUMMARY.md  BUGS_FIXED_FINAL_SUMMARY.md  BUG_FIX_REPORT.md  CHAT_UI_SUCCESS.md  COMPLETE_WORKFLOW_AND_LOGIC_BUG_ANALYSIS.md  COMPLETE_WORK_SUMMARY.md  COMPREHENSIVE_LLM_AUDIT_V2.md  COMPREHENSIVE_PROJECT_STUDY_REPORT.md  CRITICAL_BUGS_ANALYSIS_AND_FIXES.md  CRITICAL_BUGS_FIXES_APPLIED.md  DESIGN_PATTERNS_AND_BEST_PRACTICES.md  E2E_TEST_RESULTS.md  E2E_WORKFLOW_TEST_REPORT.md  EVALUATION_AGENT_INTELLIGENCE_ENHANCEMENTS.md  FINAL_ANALYSIS_SUMMARY.md  FINAL_STATUS_AND_SOLUTION.md  FINAL_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  FINAL_WORK_SUMMARY.md  FIXES_COMPLETE_SUMMARY.md  FLEXIBLE_METADATA_WORKFLOW.md  FRESH_COMPREHENSIVE_AUDIT.md  FRONTEND_BACKEND_E2E_TEST_REPORT.md  FRONTEND_BACKEND_INTEGRATION_ANALYSIS.md  FRONTEND_BACKEND_INTEGRATION_FIXES_APPLIED.md  FRONTEND_BUTTON_STATE_FIX.md  FUTURE_ENHANCEMENTS_GUIDE.md  GAP_FIXES_COMPLETE.md  GOOGLE_AI_ENGINEER_INTELLIGENCE_REPORT.md  GOOGLE_ENGINEER_ANALYSIS.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_AND_CORRECTIONS_REPORT.md  ITERATIVE_DEVELOPMENT_CHRONICLE.md  (+32 more)
mvp-example/: CLAUDE.md  context_2.yaml  context_conversation.yaml  context_error.yaml  context_eval.yaml  context_intents.yaml  context_metadata.yaml  context_summary.yaml  control_script.py  conversation.py  conversationAgent.py  conversionagent.py  converter.py  d.py  evaluation_agent_final.py  evaluation_context.yaml  final_script.py  format_detector.py  kg_files.py  knowledge_graph.py  linkmlnwb_to_ttl.py  llm_agent.py  mcp_server.py  metadata_questioner.py  nwb_to_linkml.py  registery.py  run_single_agent.py  summary.py  testing_pipeline_pytest.py  workflow.py
old-spec-example/: design.md  requirements.md
outputs/: test_correction_context.json  test_inspection_report.txt
results/: sub-AllenCellTypes-ses-CurveDemo.data.html  sub-AllenCellTypes-ses-CurveDemo.data.jsonld  sub-AllenCellTypes-ses-CurveDemo.data.nt  sub-AllenCellTypes-ses-CurveDemo.data.triples.txt  (+2 more)
(+1024 files in other folders)
