# pyproject.toml - Python Package Configuration
# Standard PEP 518/621 compliant configuration

[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-neurodata-conversion"
version = "0.1.0"
description = "AI-powered neurophysiology data conversion to NWB format using multi-agent architecture with Claude Sonnet 4.5"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Aditya Patane", email = "aditya@example.com"}
]
maintainers = [
    {name = "Aditya Patane", email = "aditya@example.com"}
]
keywords = [
    "neuroscience",
    "nwb",
    "neurodata",
    "conversion",
    "ai",
    "multi-agent",
    "claude",
    "neurophysiology"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Core dependencies
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "neuroconv>=0.6.3",
    "pynwb>=2.8.2",
    "nwbinspector>=0.4.36",
    "anthropic>=0.39.0",
    "websockets>=13.1",
    "spikeinterface>=0.101.0",
    "python-dotenv>=1.0.0",
    "reportlab>=4.2.5",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.2",
    "numpy>=1.24.0",
    "h5py>=3.8.0",
    "httpx>=0.27.0",
]

# Optional dependencies
[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.2.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "pre-commit>=3.6.0",
    "ruff>=0.7.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "bandit>=1.7.6",
    "pydocstyle>=6.3.0",
]

test = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.2.0",
    "pytest-mock>=3.12.0",
]

docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

all = [
    "agentic-neurodata-conversion[dev,test,docs]"
]

[project.urls]
Homepage = "https://github.com/your-org/agentic-neurodata-conversion"
Documentation = "https://github.com/your-org/agentic-neurodata-conversion#readme"
Repository = "https://github.com/your-org/agentic-neurodata-conversion"
Issues = "https://github.com/your-org/agentic-neurodata-conversion/issues"

[project.scripts]
# CLI entry points
nwb-convert = "backend.src.cli:main"

# ============================================================================
# Tool Configurations
# ============================================================================

[tool.setuptools]
package-dir = {"" = "backend"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["backend"]
include = ["src*"]
exclude = ["tests*", "test scripts*"]

[tool.setuptools.package-data]
"*" = [
    "*.yaml",
    "*.yml",
    "*.json",
    "*.txt",
    "*.md",
    "templates/**/*",
    "prompts/**/*"
]

# ============================================================================
# Black - Code Formatter
# ============================================================================
[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | __pycache__
  | venv
  | build
  | dist
)/
'''

# ============================================================================
# isort - Import Sorting
# ============================================================================
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "*/venv/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
    "*/__pycache__/*",
    "*/.pytest_cache/*"
]

# ============================================================================
# Ruff - Fast Linter (replaces flake8, pylint, etc.)
# ============================================================================
[tool.ruff]
line-length = 120
target-version = "py312"

# Enable specific rule sets
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TRY",  # tryceratops
]

ignore = [
    "E501",   # Line too long (handled by black)
    "B008",   # Do not perform function call in argument defaults
    "TRY003", # Avoid specifying long messages outside exception class
    "ARG002", # Unused method argument
    "ARG001", # Unused function argument
    "TRY300", # Consider moving statement to else block (stylistic)
    "TRY400", # Use logging.exception instead of logging.error (stylistic)
    "TRY401", # Redundant exception object in logging.exception (stylistic)
    "TRY301", # Abstract raise to inner function (stylistic)
    "TRY004", # Prefer TypeError (stylistic)
    "TRY200", # Use raise from to specify exception cause (stylistic)
    "F841",   # Local variable assigned but never used (TODO: fix later)
    "SIM108", # Use ternary operator (stylistic)
    "SIM102", # Use single if statement instead of nested (stylistic)
    "C401",   # Unnecessary generator (stylistic)
    "E402",   # Module level import not at top (intentional in some files)
    "B904",   # Raise from err (stylistic)
    "F821",   # Undefined name (TYPE_CHECKING imports)
    "SIM105", # Use contextlib.suppress (stylistic)
]

# Exclude files/directories
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "venv",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"test scripts/**/*.py" = ["ARG", "S101"]  # Allow unused args and assert in tests

# ============================================================================
# mypy - Static Type Checker
# ============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter typing
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_optional = false

# Exclude specific paths
exclude = [
    "venv/",
    ".venv/",
    "build/",
    "dist/",
    "test scripts/",
]

[[tool.mypy.overrides]]
module = [
    "neuroconv.*",
    "pynwb.*",
    "nwbinspector.*",
    "spikeinterface.*",
    "anthropic.*",
]
ignore_missing_imports = true

# ============================================================================
# pytest - Testing Framework
# ============================================================================
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["test scripts"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = [".", "backend/src"]

# Markers for test categorization
markers = [
    "unit: Unit tests for individual components (fast, no external dependencies)",
    "integration: Integration tests between multiple components",
    "e2e: End-to-end tests for complete workflows",
    "property: Property-based tests using Hypothesis for robust validation",
    "slow: Tests that take more than 5 seconds to run",
    "llm: Tests that involve LLM API calls (may incur costs)",
    "api: Tests for REST API endpoints",
    "security: Security and vulnerability tests",
    "performance: Performance and benchmark tests",
    "smoke: Quick smoke tests for basic functionality",
    "critical: Tests for critical production paths",
]

# Asyncio configuration
asyncio_mode = "auto"

# Output options
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "-ra",
    "--cov=backend/src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=60",  # Minimum 60% coverage (can increase to 80)
    "--maxfail=5",
    "--durations=10",
]

# Logging
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Timeout for individual tests
timeout = 300

# Ignore warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================================
# Coverage.py - Code Coverage
# ============================================================================
[tool.coverage.run]
source = ["backend/src"]
omit = [
    "test scripts/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/migrations/*",
    "*/conftest.py",
    "*/.pytest_cache/*",
]
branch = true
parallel = true

[tool.coverage.report]
fail_under = 60  # Minimum 60% coverage (your project has 80%, can increase)
show_missing = true
skip_covered = false
skip_empty = true
precision = 2
sort = "Cover"

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "@runtime_checkable",
    "class .*\\bProtocol\\):",
    "pass",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"
title = "Agentic Neurodata Conversion - Test Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

# ============================================================================
# Bandit - Security Linter
# ============================================================================
[tool.bandit]
targets = ["backend/src"]
exclude_dirs = [
    "test scripts",
    "*/test_*.py",
    "*/.venv/*",
    "*/venv/*",
]
skips = [
    "B101",  # assert_used (we use asserts in tests)
    "B601",  # paramiko_calls
]

# ============================================================================
# pydocstyle - Docstring Style Checker
# ============================================================================
[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104", "D107", "D212"]  # Missing docstrings, D212: Multi-line docstring summary
match = "(?!test_).*\\.py"
match_dir = "^(?!tests|test scripts|migrations).*"
